# sipserver

./: CMakeLists.txt  SipServer.cpp  SipServer.h  main.cpp
conf/: config.ini
utils/: Log.h  func.cpp  func.h  myconfig.cpp  myconfig.h  mylog.cpp  mylog.h
